--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@ Education: B.S. in Computer Science from Purdue"/>
 	<link rel="shortcut icon" href="/favicon.ico">
 
 	<title>About</title>
-	<link rel="stylesheet" href="https://taylorbrazelton.com/css/style.min.9a30741782203507f3d35fe9cefabad487c72fc82dfbdf59121759fc2fa52f92.css" integrity="sha256-mjB0F4IgNQfz01/pzvq61IfHL8gt+99ZEhdZ/C+lL5I=">
+	<link rel="stylesheet" href="https://taylorbrazelton.com/css/style.min.bf17d429527cc9978ec99e8d5e3a5319fb29fb7f783e39f2fbe1260fabfbb57c.css" integrity="sha256-vxfUKVJ8yZeOyZ6NXjpTGfsp+394Pjny++EmD6v7tXw=">
 	
 </head>
 
@@ -75,15 +75,15 @@ Education: B.S. in Computer Science from Purdue"/>
 		<div class="content">
 			
 
-<h3 id="who-am-i">Who Am I?</h3>
+<h3 id="who-am-i">Who Am I?<a href="#who-am-i" class="anchor" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg></a></h3>
 
 <p>I&rsquo;m a guy with passion for entrepreneurship and technology!</p>
 
-<h3 id="interesting-fact">Interesting Fact:</h3>
+<h3 id="interesting-fact">Interesting Fact:<a href="#interesting-fact" class="anchor" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg></a></h3>
 
 <p>I like to juggle.</p>
 
-<h3 id="education">Education:</h3>
+<h3 id="education">Education:<a href="#education" class="anchor" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg></a></h3>
 
 <p>B.S. in Computer Science from Purdue</p>
 
