--- a/themes/custom1/macros.html
+++ b/themes/custom1/macros.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LD3MQXQGQ2"></script>
-    <script src="https://app.sitepixel.io/pixel/index.js" id="widgetjs" site_id="10" />
+    <!-- <script src="https://app.sitepixel.io/pixel/index.js" id="widgetjs" site_id="10" /> -->
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
