--- a/themes/my-custom-theme/macros.html
+++ b/themes/my-custom-theme/macros.html
@@ -6,7 +6,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/typebase.css">
+    <!-- <link rel="stylesheet" href="/css/typebase.css"> -->
+    <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
+
 
     <link rel="stylesheet" href="/3rdparty/highlight/styles/dark.min.css">
     <script src="/3rdparty/highlight/highlight.min.js"></script>
@@ -21,6 +23,7 @@
 
     gtag('config', 'G-LD3MQXQGQ2');
     </script>
+    <script src="/livereload.js"></script>
 </head>
 {% endmacro -%}
 
