--- a/themes/my-custom-theme/macros.html
+++ b/themes/my-custom-theme/macros.html
@@ -27,7 +27,12 @@
 
     gtag('config', 'G-LD3MQXQGQ2');
     </script>
-    <script src="/livereload.js"></script>
+    <!-- <script src="/livereload.js"></script> -->
+
+    <script type="module">
+        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+    </script>
+
 </head>
 {% endmacro -%}
 
